--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <div class="container">
-        <h2 class="mt-5 mb-5">Security Control Inventory</h2>
+        <h2 class="mt-5">Security Control Inventory</h2>
         <div class="row mb-5">
             <div class="form-group col-md-6 mb-3">
                 <label for="mainID">Main Control ID</label>
@@ -36,34 +36,37 @@
                 />
             </div>
             <div class="form-group col-md-6 mb-3">
-                <label for="domain">Domain</label>
-                <input
-                  type="text"
-                  name="domain"
-                  class="form-control"
-                  id="domain"
-                  placeholder="Enter Domain"
-                />
-            </div>
+                <label for="domain">Security Domain</label>
+                <select class="form-control" id="domain">
+                  <option value="">Select an option</option>
+                  <option value="Security and Risk Management">Security and Risk Management</option>
+                  <option value="Asset Security">Asset Security</option>
+                  <option value="Security Architecture and Engineering">Security Architecture and Engineering</option>
+                  <option value="Communication and Network Security">Communication and Network Security</option>
+                  <option value="Identity and Access Management (IAM)">Identity and Access Management (IAM)</option>
+                  <option value="Security Assessment and Testing">Security Assessment and Testing</option>
+                  <option value="Security Operations">Security Operations</option>
+                  <option value="Software Development Security">Software Development Security</option>
+                </select>
+              </div>              
             <div class="form-group col-md-6 mb-3">
                 <label for="scope">Scope</label>
-                <input
-                  type="text"
-                  name="scope"
-                  class="form-control"
-                  id="scope"
-                  placeholder="Enter Scope"
-                />
-            </div>
-            <div class="col-lg-12 mt-5">
-                <button class="btn btn-success" id="submit" onclick="AddData()">Add Data</button>
-                <button class="btn btn-primary" id="Update" >Update Data</button>
+                <select class="form-control" id="scope">
+                    <option value="">Select an option</option>
+                    <option value="Yes">Yes</option>
+                  <option value="No">No</option>
+                </select>
+              </div>
+            <div class="col-lg-12 mt-2">
+                <button class="btn btn-success" id="Add Control" onclick="AddData()">Add Control</button>
+                <button class="btn btn-primary" id="Update" style="display: none;" onclick="updateData()">Update</button>
             </div>
         </div>
         <hr>
-        <div class="row mt-5">
+        <div class="row mt-2">
           <div class="col-12">
             <table class="table table-bordered" id="crudTable">
+                <button class="btn btn-secondary float-end" onclick="downloadCSV()">Download CSV</button> </div>
                 <thead>
                     <tr>
                         <th>Main Control ID</th>
